Fix headerNavCopy not showing on small screens

--- a/UI/css/queries.css
+++ b/UI/css/queries.css
@@ -3,6 +3,8 @@
     /* Header */
     #headerNav {display: none;}
 
+    #headerNavCopy {display: inline-block;}
+
     #headerNavBurger {
         display: inline-block;
         margin-left: 75%;
